Experiments 41-45 description added

--- a/experiments_part_2.ipynb
+++ b/experiments_part_2.ipynb
@@ -601,7 +601,7 @@
     "* model: Base -> AlexNet\n",
     "* mean: 0.485, 0.456, 0.406\n",
     "* std: 0.229, 0.224, 0.225\n",
-    "* number of unfreezed layers: 1\n",
+    "* number of unfreezed FC layers: 1\n",
     "\n",
     "Results:\n",
     "* best epoch: 75\n",
@@ -642,112 +642,114 @@
     "* number of unfreezed FC layers: 1 -> 3\n",
     "\n",
     "Results:\n",
-    "* best epoch: 17\n",
-    "* test loss: 3.64\n",
-    "* test accuracy: 13.88% (116/836)\n",
-    "* train time (minutes): 9.15"
+    "* best epoch: 90\n",
+    "* test loss: 0.986147\n",
+    "* test accuracy: 70.45% (589/836)\n",
+    "* train time (minutes): 266.15"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp16'></a>\n",
-    "## Experiment 16\n",
+    "<a id='exp41'></a>\n",
+    "## Experiment 41\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
+    "* pretrained model\n",
+    "* Model: Base -> AlexNet\n",
+    "* augmentation: ColorJitter: true -> false\n",
+    "* number of unfreezed FC layers: 3\n",
     "\n",
     "Results:\n",
-    "* best epoch: 144\n",
-    "* test loss: 4.382009\n",
-    "* test accuracy: 7.89% (66/836)\n",
-    "* train time (minutes): 51.76"
+    "* best epoch: 87\n",
+    "* test loss: 0.935989\n",
+    "* test accuracy: 74.40% (622/836)\n",
+    "* train time (minutes): 68.8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp17'></a>\n",
-    "## Experiment 17\n",
+    "<a id='exp42'></a>\n",
+    "## Experiment 42\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 41](#exp41)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> AlexNet \n",
-    "* use pretrained weights, unfreeze last FC layer\n",
-    "\n",
+    "* augmentation: horizontal flip: true -> false\n",
     "\n",
     "Results:\n",
-    "* best epoch: 42\n",
-    "* test loss: 1.062519\n",
-    "* test accuracy: 74.88% (626/836)\n",
-    "* train time (minutes): 17.32"
+    "* best epoch: 92\n",
+    "* test loss: 0.971809\n",
+    "* test accuracy: 73.33% (613/836)\n",
+    "* train time (minutes): 75.72"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp18'></a>\n",
-    "## Experiment 18\n",
+    "<a id='exp43'></a>\n",
+    "## Experiment 43\n",
     "\n",
-    "equal to [exp 17](#exp17)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<a id='exp19'></a>\n",
-    "## Experiment 19\n",
-    "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> AlexNet \n",
-    "* use pretrained weights, unfreeze last 2 FC layers\n",
+    "* pretrained: true\n",
+    "* model: vgg16\n",
+    "* use color jitter: false\n",
+    "* use random horizontal flip: false\n",
+    "* number of unfreezed FC layers: 1\n",
+    "* mean: 0.485, 0.456, 0.406\n",
+    "* std: 0.229, 0.224, 0.225\n",
     "\n",
     "Results:\n",
-    "* best epoch: 53\n",
-    "* test loss: 1.061143\n",
-    "* test accuracy: 72.13% (603/836)\n",
-    "* train time (minutes): 22.88"
+    "* best epoch: 36\n",
+    "* test loss: 0.360861\n",
+    "* test accuracy: 88.88% (613/836)\n",
+    "* train time (minutes): 75.72\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp20'></a>\n",
-    "## Experiment 20\n",
+    "<a id='exp44'></a>\n",
+    "## Experiment 44\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 43](#exp43)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> AlexNet \n",
-    "* use pretrained weights, unfreeze last 3 FC layers\n",
+    "* number of unfreezed FC layers: 1 -> 2\n",
     "\n",
     "Results:\n",
-    "* best epoch: 42\n",
-    "* test loss: 1.062519\n",
-    "* test accuracy: 74.88% (626/836)\n",
-    "* train time (minutes): 18.58"
+    "* best epoch: 44\n",
+    "* test loss: 0.377006\n",
+    "* test accuracy: 89.83% (751/836)\n",
+    "* train time (minutes): 86.2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='exp45'></a>\n",
+    "## Experiment 45\n",
+    "\n",
+    "Parent experiment: [exp 43](#exp43)\n",
+    "\n",
+    "Differences from parent experiment: \n",
+    "* number of unfreezed FC layers: 1 -> 3\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 41\n",
+    "* test loss: 0.381830\n",
+    "* test accuracy: 88.40% (739/836)\n",
+    "* train time (minutes): 60.16"
    ]
   },
   {
