Experiments 46-51 description added

--- a/experiments_part_2.ipynb
+++ b/experiments_part_2.ipynb
@@ -706,6 +706,7 @@
     "* number of unfreezed FC layers: 1\n",
     "* mean: 0.485, 0.456, 0.406\n",
     "* std: 0.229, 0.224, 0.225\n",
+    "* lr: 0.001\n",
     "\n",
     "Results:\n",
     "* best epoch: 36\n",
@@ -757,114 +758,126 @@
    "metadata": {},
    "source": [
     "<a id='exp21'></a>\n",
-    "## Experiment 21\n",
+    "## Experiment 46\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 43](#exp43)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> vgg16 (from scratch)\n",
+    "* model: vgg16 -> vgg16_bn\n",
+    "* number of unfreezed FC layers: 1\n",
     "\n",
     "Results:\n",
-    "* best epoch: 110\n",
-    "* test loss: 0.992273\n",
-    "* test accuracy: 76.44% (639/836)\n",
-    "* train time (minutes): 248.18"
+    "* best epoch: 36\n",
+    "* test loss: 0.358328\n",
+    "* test accuracy: 89.00% (744/836)\n",
+    "* train time (minutes): 29.87"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp22'></a>\n",
-    "## Experiment 22\n",
+    "<a id='exp47'></a>\n",
+    "## Experiment 47\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 29](#exp29)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> vgg16 \n",
-    "* use pretrained weights, unfreeze last FC layer\n",
+    "* model: Base -> vgg16_bn\n",
+    "* augmentation: use color jitter: false\n",
+    "* augmentation: use random horizontal flip: false\n",
+    "* mean: 0.485, 0.456, 0.406 (ImageNet)\n",
+    "* std: 0.229, 0.224, 0.225 (ImageNet)\n",
+    "* * lr: 0.001\n",
     "\n",
     "Results:\n",
-    "* best epoch: 1\n",
-    "* test loss: 2.082360\n",
-    "* test accuracy: 52.63% (440/836)\n",
-    "* train time (minutes): 2.36"
+    "* best epoch: 105\n",
+    "* test loss: 1.872399\n",
+    "* test accuracy: 50.00% (418/836)\n",
+    "* train time (minutes): 330.0"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp23'></a>\n",
-    "## Experiment 23\n",
+    "<a id='exp48'></a>\n",
+    "## Experiment 48\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 47](#exp47)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> vgg16 \n",
-    "* use pretrained weights, unfreeze last 2 FC layers\n",
+    "* augmentation color jitter: false -> true\n",
+    "* lr: 0.001\n",
     "\n",
     "Results:\n",
-    "* best epoch: 1\n",
-    "* test loss: 2.082360\n",
-    "* test accuracy: 52.63% (440/836)\n",
-    "* train time (minutes): 1.47"
+    "* best epoch: 99\n",
+    "* test loss: 1.479383\n",
+    "* test accuracy: 58.49% (489/836)\n",
+    "* train time (minutes): 320.03"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp24'></a>\n",
-    "## Experiment 24\n",
+    "<a id='exp49'></a>\n",
+    "## Experiment 49\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 48](#exp48)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> vgg16 \n",
-    "* use pretrained weights, unfreeze last 3 FC layers\n",
+    "* augmentation: use random horizontal flip: false -> true\n",
     "\n",
     "Results:\n",
-    "* best epoch: 1\n",
-    "* test loss: 2.082360\n",
-    "* test accuracy: 52.63% (440/836)\n",
-    "* train time (minutes): 2.0"
+    "* best epoch: 123\n",
+    "* test loss: 1.136795\n",
+    "* test accuracy: 68.54% (573/836)\n",
+    "* train time (minutes): 218.6"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp25'></a>\n",
-    "## Experiment 25\n",
+    "<a id='exp50'></a>\n",
+    "## Experiment 50\n",
     "\n",
-    "Parent experiment: [exp 1](#exp1)\n",
+    "Parent experiment: [exp 43](#exp43)\n",
     "\n",
     "Differences from parent experiment: \n",
-    "* use mean and std for current train dataset\n",
-    "* add weight decay 0.0005\n",
-    "* add augmentaion: RandomHorizontalFlip and RandomResizedCrop\n",
-    "* add augmentation: Color Jitter\n",
-    "* model: Base -> Base_1 (from scratch)\n",
+    "\n",
+    "* model: vgg16 -> vgg16_bn\n",
+    "* augmentaion: color jitter: false -> true\n",
+    "* augmentation: random horizontal flip: false -> true\n",
+    "* number of unfreezed FC layers: 1\n",
     "\n",
     "Results:\n",
-    "* best epoch: 124\n",
-    "* test loss: 4.401157\n",
-    "* test accuracy: 5.26% (44/836)\n",
-    "* train time (minutes): 47.38"
+    "* best epoch: 50\n",
+    "* test loss: 0.393089\n",
+    "* test accuracy: 88.16% (737/836)\n",
+    "* train time (minutes): 88.5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='exp51'></a>\n",
+    "## Experiment 51\n",
+    "\n",
+    "Parent experiment: [exp 49](#exp49)\n",
+    "\n",
+    "Differences from parent experiment: \n",
+    "\n",
+    "* mean: 0.4864 0.4560 0.3918 (custom)\n",
+    "* std: 0.2602 0.2536 0.2562 (custom)\n",
+    "\n",
+    "Results:\n",
+    "* best epoch: 99\n",
+    "* test loss: 0.845104\n",
+    "* test accuracy: 75.48% (631/836)\n",
+    "* train time (minutes): 167.37"
    ]
   },
   {
