Conslusions and final table added

--- a/experiments_part_2.ipynb
+++ b/experiments_part_2.ipynb
@@ -14,32 +14,32 @@
     "\n",
     "Use the links below to navigate between experiments description:\n",
     "\n",
-    "* [Experiment 26](#exp26): model `Base`\n",
-    "* [Experiment 27](#exp27): model `Base` \n",
-    "* [Experiment 28](#exp28): model `Base` \n",
-    "* [Experiment 29](#exp29): model `Base` \n",
-    "* [Experiment 30](#exp30): model `Base` \n",
-    "* [Experiment 31](#exp31): model `Base` \n",
-    "* [Experiment 32](#exp32): model `Base` \n",
-    "* [Experiment 33](#exp33): model `Base` \n",
-    "* [Experiment 34](#exp34): model `Base` \n",
-    "* [Experiment 35](#exp35): model `Base` \n",
-    "* [Experiment 36](#exp36): model `Base` \n",
-    "* [Experiment 37](#exp37): model `Base` \n",
-    "* [Experiment 38](#exp38): model `AlexNet` (from scratch)\n",
-    "* [Experiment 39](#exp39): model `AlexNet` (from scratch)\n",
-    "* [Experiment 40](#exp40): model `AlexNet` (from scratch), best result for this model from scratch\n",
-    "* [Experiment 41](#exp41): model `Base`, best result for this model\n",
-    "* [Experiment 42](#exp42): model `AlexNet` (transfer learning), best result for this model transfer learning\n",
-    "* [Experiment 43](#exp43): equal to experiment 17\n",
-    "* [Experiment 44](#exp44): model `AlexNet` (transfer learning)\n",
-    "* [Experiment 45](#exp45): model `AlexNet` (transfer learning), best result for this model transfer learning\n",
-    "* [Experiment 46](#exp46): model `vgg16` (from scratch), best result among all 25 experiments\n",
-    "* [Experiment 47](#exp47): model `vgg16` (transfer learning), fail to train\n",
-    "* [Experiment 48](#exp48): model `vgg16` (transfer learning), fail to train\n",
-    "* [Experiment 49](#exp49): model `vgg16` (transfer learning), fail to train\n",
-    "* [Experiment 50](#exp50): model `Base_1` (from scratch), best result for this model from scratch, but worse than model `Base`\n",
-    "* [Experiment 51](#exp51): model `Base_1` (from scratch), best result for this model from scratch, but worse than model `Base`\n",
+    "* [Experiment 26](#exp26): model `Base`, scratch\n",
+    "* [Experiment 27](#exp27): model `Base`, scratch \n",
+    "* [Experiment 28](#exp28): model `Base`, scratch \n",
+    "* [Experiment 29](#exp29): model `Base`, scratch\n",
+    "* [Experiment 30](#exp30): model `Base_2`, scratch \n",
+    "* [Experiment 31](#exp31): model `Base_2`, scratch\n",
+    "* [Experiment 32](#exp32): model `Base_2`, scratch\n",
+    "* [Experiment 33](#exp33): model `AlexNet`, scratch \n",
+    "* [Experiment 34](#exp34): model `Base_fix`, scratch \n",
+    "* [Experiment 35](#exp35): model `Base_1_fix`, scratch \n",
+    "* [Experiment 36](#exp36): model `vgg16`, scratch \n",
+    "* [Experiment 37](#exp37): model `vgg16`, scratch \n",
+    "* [Experiment 38](#exp38): model `AlexNet` pretrained\n",
+    "* [Experiment 39](#exp39): model `AlexNet` pretrained\n",
+    "* [Experiment 40](#exp40): model `AlexNet` pretrained\n",
+    "* [Experiment 41](#exp41): model `AlexNet`, pretrained\n",
+    "* [Experiment 42](#exp42): model `AlexNet` pretrained\n",
+    "* [Experiment 43](#exp43): model `vgg16`, pretrained\n",
+    "* [Experiment 44](#exp44): model `vgg16`, pretrained \n",
+    "* [Experiment 45](#exp45): model `vgg16` pretrained\n",
+    "* [Experiment 46](#exp46): model `vgg16_bn`, pretrained\n",
+    "* [Experiment 47](#exp47): model `vgg16_bn`, scratch\n",
+    "* [Experiment 48](#exp48): model `vgg16_bn`, scratch\n",
+    "* [Experiment 49](#exp49): model `vgg16_bn`, scratch\n",
+    "* [Experiment 50](#exp50): model `vgg16_bn`, pretrained\n",
+    "* [Experiment 51](#exp51): model `vgg16_bn`, scratch\n",
     "\n",
     "\n",
     "[Conclusions](#conclusions) are here.\n",
@@ -480,7 +480,7 @@
     "<a id='exp32'></a>\n",
     "## Experiment 32\n",
     "\n",
-    "Parent experiment: [exp 31](#exp1)\n",
+    "Parent experiment: [exp 31](#exp31)\n",
     "\n",
     "Differences from parent experiment: \n",
     "* color jitter: off -> on\n",
@@ -757,7 +757,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<a id='exp21'></a>\n",
+    "<a id='exp46'></a>\n",
     "## Experiment 46\n",
     "\n",
     "Parent experiment: [exp 43](#exp43)\n",
@@ -885,20 +885,33 @@
    "metadata": {},
    "source": [
     "<a id='conclusions'></a>\n",
-    "## CONCLUSIONS for series of experiments 1-25\n",
+    "## CONCLUSIONS for serie of experiments 26-51\n",
     "\n",
-    "Which improvements have been made:\n",
-    "* For `Base` model:\n",
-    "  * optimizer SGD works faster than Adam and a little better. [exp 1](#exp1) vs [exp 6](#exp6)\n",
-    "  * if using Adam, it is better to start with small values of learning rate (0.00001). [exp 6](#exp6) vs [exp 5](#exp5) \n",
-    "  * it is better to calculate actual mean and std from train split than use imagenet values (for training model from scratch) [exp 10](#exp10) vs [exp 9](#exp9)\n",
-    "  * using weight decay 0.00005 get better result than not using. [exp 11](#exp11) vs [exp 10](#exp10)\n",
-    "  * using Horizontal Flip and Random Resized Crop augmentation reduce overfitting and get better result: [exp 12](#exp12) vs [exp 11](#exp11)\n",
-    "  * adding augmentations from ColorJitter get some enhancements: [exp 16](#exp16) vs [exp 12](#exp12)\n",
-    "* Using `AlexNet` (from torchvision) model get 10x better result than my custom `Base`, if train from scratch: [exp 13](#exp13) vs [exp 12](#exp12)\n",
-    "* Using transfer learning for `AlexNet` get some better result than train from scratch and ~5x time faster training: [exp 17](#exp17) vs [exp 15](#exp15)\n",
-    "* Using vgg16 from scratch get small better result than AlexNet transfer learning: [exp 21](#exp21) vs [exp 17](#exp17)\n",
-    "* but transfer learning for vgg failed [exp 22](#exp21), [exp 23](#exp23), [exp 24](#exp24). "
+    "#### Table with best results for each model  \n",
+    "\n",
+    "Model | Type(scratch/pretrained) | Test accuracy, % | Test loss | Time, minutes | Experiment | Commentaries\n",
+    "----- | ------------------------ | ---------------- | ----------| ------------- | -----------| ------------\n",
+    "`Base_fix` | scratch | 63.64 | 1.287084 | 223.72 | [exp 34](#exp34) | -\n",
+    "`Base_1_fix` | scratch | 64.95 | 1.334149 | 214.98 | [exp 35](#exp35) | -\n",
+    "`Base_2` | scratch | 66.15 | 1.315878 |  192.85 | [exp 32](#exp32) | -\n",
+    "`AlexNet` | scratch | 66.51 | 1.382329 | 262.42 | [exp 33](#exp33) | -\n",
+    "`AlexNet` | pretrained | 74.40 | 0.935989 | 68.8 | [exp 41](#exp41) | ColorJitter off<br/> horizontal flip on<br/> num unfreezed FC layers: 3\n",
+    "`vgg16_bn` | scratch | 75.48 | 0.845104 | 167.37 | [exp 51](#exp51) | ColorJitter on<br/> horizontal flip on<br/> \n",
+    "`vgg16` | scratch | 77.51 | 0.903384 | 238.15 | [exp 37](#exp37) | ColorJitter off<br/> horizontal flip on\n",
+    "`vgg16_bn` | pretrained | 89.00 | 0.358328 | 29.87 | [exp 46](#exp46) | ColorJitter off<br/> horizontal flip off<br/> num unfreezed FC layers: 1\n",
+    "`vgg16` | pretrained | 89.83 | 0.377006 | 86.2 | [exp 44](#exp44) | ColorJitter off<br/> horizontal flip off <br/> num unfreezed FC layers: 2\n",
+    "\n",
+    "\n",
+    "Conclusions:\n",
+    "* As usual, more deeper model show better result\n",
+    "* For same architecture transfer learning show much better result than training from scratch\n",
+    "* `vgg16_bn` show worse result than `vgg16` (it is strange.. why adding batch normalization did't improve result?)\n",
+    "* Using batch normalization doing training process faster 2x-3x times both from scratch and using transfer learning\n",
+    "* It is better to switch off ColorJitter (and sometimes ever RandomHorizontalFlip) augmentations then using transfer learning mode\n",
+    "* For training from scratch using ColorJitter and RandomHorizontalFlip augmentations dramatically improve result\n",
+    "* Custom weight initialization technique (so-called \"general rule\") works worse than default weights initialization from PyTorch\n",
+    "* It is not clear how much last FC layers unfreeze than using transfer learning (1 or 2 or 3), so, it is better to check all modes\n",
+    "\n"
    ]
   },
   {
@@ -912,11 +925,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1. Explore why vgg transfer learning failed\n",
-    "2. Explore why my custom AlexNet realization 10x worse than PyTorch (may be key in adaptive average pool?)\n",
-    "3. Check transfer learning with unfreezing convolution layers too (in these experiments fully connected layer were unfreezed only)\n",
-    "4. Try state of the art architectures to train (from scratch and transfer learning)\n",
-    "5. Get 90% of test accuracy"
+    "1. Check [exp 41](#exp41), but with num FC unfreezed = 1 (should improve the result)\n",
+    "1. Add more modern architectures and compare results\n",
+    "1. Implement and try unfreezing convolution layers"
    ]
   }
  ],
